public/css/styles.css
/**
Typography
*/

@font-face {
    font-family: "Open Sans";
    src: url("../fonts/OpenSans-Regular.ttf");
}

@font-face {
    font-family: "Open Sans";
    font-weight: bold;
    src: url("../fonts/OpenSans-Bold.ttf");
}

@font-face {
    font-family: "Open Sans";
    font-weight: 300;
    src: url("../fonts/OpenSans-Light.ttf");
}

h1, h2, p {
    font-family: "Open Sans", sans-serif
}

h1, h2 {
    font-weight: bold;
}

h1 {
    font-size: 3.6em;
}

h2 {
    font-size: 2.4em;
    margin-bottom: 0.8em;
}

h3 {
    font-weight: bold;
    font-size: 1.2em;
}

p, button {
    font-size: 1.2em
}

.lead {
    font-size: 2.4em;
    font-weight: 300;
}

@media ( max-width: 999px ) {
    h1 {
        font-size: 2.4em;
    }

    h2 {
        font-size: 1.8em;
    }

    h3 {
        font-size: 1.2em;
    }

    .lead {
        font-size: 1.8em;
        font-weight: 300;
    }

}

@media (max-width: 767.98px) {
    html {
        font-size: 14px;
    }
}

/**
Spacing
 */

section {
    padding: 7.2em 0;
    background-color: #fff;
}

@media (max-width: 767.98px) {
    section {
        padding: 3em 0;
    }
}

.spacer {
    margin-top: 9em;
}

.spacer-half {
    margin-top: 4.5em;
}

/**
Colors
 */

section.primary {
    background-color: #e0ece4;
}

section.secondary {
    background-color: #fff4f2;
}

section.dark {
    background-color: #f7f7f7;
}

a, a:hover, a:focus, .link,
.btn-link, .btn-link:hover, .btn-link:focus {
    color: #B25C4D;
}

a:hover, a:focus,
.btn-link:hover, .btn-link:focus {
    text-decoration: underline;
}

/**
Projects
 */

.img-profile {
    box-shadow: 0 0 2px 0 rgba(0, 0, 0, .06), 0 4px 16px 0 rgba(0, 0, 0, .12);
    max-height: 22em;
}

.img-screenshot {
    box-shadow: 0 0 2px 0 rgba(0, 0, 0, .06), 0 4px 16px 0 rgba(0, 0, 0, .12);
}

/**
Experience
 */

div.job {
    cursor: pointer;
    padding: 1em;
    position: relative;
    margin-left: -1em;
}

div.job:hover {
    background-color: #e0ece4;
}

div.job > p {
    margin-bottom: 0;
}

g.active {
    filter: none;
}

.job-wrapper {
    position: relative;
    height: 42.5em;
    padding-left: 5em;
    width: calc(100% - 2.5em);
}

.axis-top, .axis-bottom {
    position: absolute;
    right: -2.5em;
}

.axis-top {
    top: 0;
}

.axis-bottom {
    bottom: 0;
    right: -2.5em;
}

.job-image {
    position: absolute;
    top: 1em;
    right: 1em;
    max-width: 10em;
    max-height: 5.5em;
}

/**
skills
 */

.skill-filters {
    list-style: none;
    padding-left: 0;
    padding-right: 2em;
}

.skill-filters li {
    float: left;
}

.skill-filters .active {
    border: 1px solid #a1a1a1;
}

.skill-filters a {
    background-color: #fff;
    color: #000;
    padding: 0.5em;
    display: inline-block;
    margin: 0.25em;
    box-shadow: 0 0 0.5px 0 rgba(0, 0, 0, .06), 0 1px 4px 0 rgba(0, 0, 0, .12);
}

.skill-filters.primary a {
    background-color: #e0ece4;
}

.skill-filters.secondary a {
    background-color: #fff4f2;
}

.skills-grid {
    margin-right: -1.5em;
}

.skills-grid-item {
    width: calc(33.333333% - 0.5em);
    margin-right: 0.5em;
    margin-bottom: 0.5em;
    padding: 1em;

    background-color: #fff;
    box-shadow: 0 0 2px 0 rgba(0, 0, 0, .06), 0 4px 16px 0 rgba(0, 0, 0, .12);
}

@media ( max-width: 999px ) {
    .skills-grid-item {
        width: calc(50% - 0.5em);
    }
}

@media ( max-width: 599px ) {
    .skills-grid-item {
        width: calc(100% - 0.5em);
    }
}

@media (min-width:1614px) {
    .container-wide {
        width: 1614px; /* 400 * 4 + 10 + 4 (from masonry)*/
        padding-right: 10px;
        padding-left: 10px;
        margin: 0 auto;
        max-width: none;
    }

    .container-wide .skills-grid-item {
        width: 390px;
        margin-right: 10px;
        margin-bottom: 10px;
        padding: 10px;
    }
}

@media (min-width:2010px) {
    .container-xtra-wide {
        width: 2010px; /* 400 * 5 + 10 */
    }
}

@media (min-width:2410px) {
    .container-xtra-wide {
        width: 2410px; /* 400 * 6 + 10 */
    }
}

@media (min-width:2810px) {
    .container-xtra-wide {
        width: 2810px; /* 400 * 7 + 10 */
    }
}

@media (min-width:3210px) {
    .container-xtra-wide {
        width: 3210px; /* 400 * 8 + 10 */
    }
}

@media (min-width:3610px) {
    .container-xtra-wide {
        width: 3610px; /* 400 * 9 + 10 */
    }
}

@media (min-width:4010px) {
    .container-xtra-wide {
        width: 4010px; /* 400 * 10 + 10 */
    }
}


.archived {
    background-color: #f5f5f5;
}

.skills-grid.hide-archived .archived {
    display: none;
}

.skills-grid.hide-not-featured .not-featured {
    display: none;
}

.skills-grid-item:hover {
    background-color: #f5f5f5;
}

.skills-grid-item.expandable {
    border: 1px solid #a1a1a1;
}

.skills-grid-item .description {
    font-size: 1em;
    line-height: 1.6em;
}

.skills-grid-item > *:last-child {
    margin-bottom: 0;
}

.skills-grid-item .skill {
    padding: 0.5em;
    display: inline-block;
    margin: 0.1em 0.1em 0.3em 0;
    font-size: 0.8em;
}

.skills-grid-item .skill.primary {
    background-color: #e0ece4;
}

.skills-grid-item .skill.secondary {
    background-color: #fff4f2;
}

.skills-grid-item .icon {
    height: 1em;
    margin-right: 0.4em;
    opacity: 0.7;
}

.skills-grid-item .icon:hover {
    opacity: 1;
}

.skills-grid-item .hidden {
    display: none;
}

/**
network
 */

.network .icon {
    display: block;
    margin: 0 auto;
    height: 4em;
    opacity: 0.7;
}

.network .icon:hover {
    opacity: 1;
}

